NVPlay 2.0 is now available.

Release notes:
	* Large refactor of main.c. define exit codes, always call nvplay_shutdown
	* Implemented Windows detection code. It can detect Windows NT, 3.x and 9x. NT is blocked
	* Split nvplay.h into header files for each category of functionality.
	* Removed the never used gdbstub 
	
Old release notes:

NVPlay 1.0 is now available.

Changes:
* Changed version system (since version 0.x will go on forever otherwise)
* Added a "repl" loop that is the new default mode. Run "-test" to run tests. 
	* "?" or "help" at the REPL loop prints help.
	* "q" or "exit" exits.
* Added support for Celsius (NV1x) GPUs (untested!)
* Added HAL system
	* GPUs now store pointers to arrays of function pointers (not C++ yet...) to avoid GPU list having huge numbers of function pointers and to make calling GPU specific functions
	more elegant
* Implemented "generic" tests that are available across every GPU (for some of them, Hal functions are required )
* Commands now store number of parameters and check for them
* Simplified terrible script parsing code
* Simplified terrible config parsing code
* Massively simplify nv_config_test_entry_t (why was I duplicating half of the test information?)
* Added many new commands:
	* Read to console and write PCI config registers 
	* Write CRTC range
	* Read to console and write VGA Sequencer registers
	* Read to console and write VGA GDC registers
* Renamed nvplayground.h to nvplay.h
* More consistent function naming scheme
* Added log_settings.redirect to optionally redirect any of stdin, stdout and stderr to the log
* -t added as an alias for -test
* Added -boot /  command line option to initialise GPU and exit
* Added "RunTest" command to run a test
* Added "PrintVersion" command
* Added GPU_IsNVx functions for GPU-specific behaviour in generic tests
* Added GPU_NV_GetGeneration functions to return a number equivalent to the NV codename for a chip
* Allowed dumping amounts of vram that are not 16 MB 

